# StracomterIII

./: README.md
.svn/: wc.db
tags/hito1/: cuentaLineas.sh  mode.sh
tags/hito1/IABase/include/: Pathfinder.h  Tri.h
tags/hito1/IABase/lib/: ASNode.cc  NavGraph.cc  Triangulation.cc
tags/hito1/IABase/src/: CMakeLists.txt  testGrafo.cc  testNiceGrafic.cc  testTri.cc
tags/hito1/core/: CMakeLists.txt
tags/hito1/core/include/: CoreNamespace.h  Enemy.h  Entity.h  EntityManager.h  Model2D.h  Player.h  StaticEntity.h
tags/hito1/core/lib/: Aplication.cc  DynamicEntity.cc  Enemy.cc  GameAction.cc  Model.cc  Model2D.cc  StaticEntity.cc  TWindow.cc  Wall.cc
tags/hito1/core/maths/include/: GraphUD.h  Matrix.h  Point.h
tags/hito1/core/maths/lib/: Matrix.cc  Node.cc
tags/hito1/core/maths/src/: testMatrix.cc
tags/hito1/core/src/: testEntity.cc  testMap.cc  testResource.cc  testWindow.cc
tags/hito1/motorFisica/: CMakeLists.txt
tags/hito1/motorFisica/include/: BodyData.h
tags/hito1/motorFisica/lib/: Body.cc  Box.cc  CMakeLists.txt  World.cc
tags/hito1/motorFisica/src/: test.cc
tags/hito1/motorGrafico/: CMakeLists.txt
tags/hito1/motorGrafico/motor2D/: CMakeLists.txt
tags/hito1/motorGrafico/motor2D/include/: MotorGrafico.h  Transformacion.h
tags/hito1/motorGrafico/motor2D/lib/: CMakeLists.txt
tags/hito1/motorGrafico/motor2D/src/: CMakeLists.txt
tags/hito1/motorOptimizacion/include/: Simplex.h
tags/hito1/motorOptimizacion/src/: test.cc
tags/hito2/: CMakeLists.txt  construir.sh  editorMap.xml
tags/hito2/AI/: CMakeLists.txt
tags/hito2/AI/include/: AI.h  Pathfinder.h
tags/hito2/AI/lib/: AI.cc
tags/hito2/AI/src/: testFSM.cc  testNiceGrafic.cc
tags/hito2/Graphics/Resources/modelos/: Captain.3ds  Especial.3ds  Explodemo.3ds  Player.3ds  Tecnic.3ds  bola.3ds  e1.3ds  e3.3ds  estanteria.3ds  human.3ds  simba3ds.3DS
tags/hito2/Graphics/include/: GraphicTree.h  GraphicsNamespace.h  Light.h  Model.h  Shape.h  Textura.h  Transformacion.h
tags/hito2/Graphics/lib/: CMakeLists.txt  Camera.cc  Light.cc  LightManager.cc  Material.cc  Model.cc  Scene.cc  SceneManager.cc  Textura.cc  TransformStack.cc  Transformacion.cc
tags/hito2/Math/: CMakeLists.txt
tags/hito2/Math/include/: LineEquation.h  Polygon.h  Triangulation.h
tags/hito2/Optimization/src/: test.cc  testOpti.cc
tags/hito2/Physics/include/: BodyData.h  Force.h  World.h
tags/hito2/Physics/lib/: Force.cc
tags/hito2/core/: CMakeLists.txt
tags/hito2/core/include/: Aplication.h  Character.h  Enemy.h  Entity.h  Explosive.h  IOControl.h  Model2D.h  ModelPhisic.h  Path.h  ResourceManager.h  StaticEntity.h  TButton.h  TForm.h  TLabel.h  TPicture.h  TWidget.h
tags/hito2/core/lib/: Aplication.cc  Bot.cc  CMakeLists.txt  Captain.cc  CharacterFeature.cc  DynamicEntity.cc  Entity.cc  EventControl.cc  Floor.cc  GameMenu.cc  GameStrategy.cc  HIDControl.cc  IOControl.cc  MovementComp.cc  Obstacle.cc  Player.cc  StaticEntity.cc  TPicture.cc  TRadioButton.cc  TWidget.cc
tags/hito2/core/src/: CMakeLists.txt  testMov.cc
tags/hito2/testFiles/maps/: gallardoMap.xml  mapRuben.xml  mapRuben.xml.wall  map_03.xml  pruebasMov.xml
trunk/: CMakeLists.txt  cuentaLineas.sh  editorMap.xml
trunk/AI/: CMakeLists.txt
trunk/AI/include/: AI.h  ASNode.h  NavGraph.h
trunk/AI/lib/: NavGraph.cc  Pathfinder.cc
trunk/AI/src/: CMakeLists.txt
trunk/Graphics/Resources/modelos/: Enemy3.3ds  Player.3ds  c2.3ds  cube.3ds  d2.3ds  d3.3ds  d4.3ds  d5.3ds  desk.3ds  e.3ds  enemigo.3ds  h3.3ds  h4.3ds  h5.3ds  m2.3ds  m5.3ds  mesa.3ds  mesaSillas.3ds  p3.3ds  p4.3ds  plant.3ds  s.3ds  s2.3ds  s4.3ds  s5.3ds  sn5.3ds  sofa.3ds  sp2.3ds  sp5.3ds  t.3ds
trunk/Graphics/Resources/shaders/: CellShading.frag  Phong.frag  Pruebas.frag
trunk/Graphics/Resources/texturas/: demo_flat.tga  engi_flat.tga  scout_flat.tga  soldier_flat.tga  spy_flat.tga
trunk/Graphics/include/: AnimationControl.h  Camera.h  Element.h  Light.h  LightManager.h  Model.h  TransformStack.h  loadjpeg.h
trunk/Graphics/lib/: AnimationControl.cc  GraphicTree.cc  Model.cc  Scene.cc  SceneManager.cc  Textura.cc
trunk/Graphics/src/: CMakeLists.txt  animation.cc  modelLoader.cc
trunk/Math/include/: GraphUD.h  Node.h  Polygon.h  Rational.h  Tri.h  Triangulation.h
trunk/Math/lib/: LineEquation.cc  Node.cc  Tri.cc  Triangulation.cc
trunk/Optimization/: CMakeLists.txt  dox.sh
trunk/Optimization/include/: Simplex.h
trunk/Optimization/lib/: Optimization.cc  Simplex.cc
trunk/Optimization/src/: CMakeLists.txt
trunk/Physics/: CMakeLists.txt
trunk/Physics/include/: Body.h  World.h
trunk/Physics/lib/: Box.cc  World.cc
trunk/Physics/src/: CMakeLists.txt
trunk/core/entities/: CMakeLists.txt
trunk/core/entities/include/: Character.h  Enemy.h  Entity.h  EventControl.h  Floor.h  Object.h  Obstacle.h  Player.h  Pointer.h  Technic.h
trunk/core/entities/lib/: CMakeLists.txt  Entity.cc  EntityManager.cc  EventControl.cc  Player.cc  Pointer.cc  Technic.cc  Wall.cc
trunk/core/include/: GameOptions.h  GameStrategy.h  Model2D.h  ModelPhisic.h  MovementComp.h  ParticleManager.h  ParticleNode.h  TCheckBox.h  TForm.h  TLabel.h  TProgressBar.h  TWidget.h
trunk/core/lib/: GameAction.cc  GameOptions.cc  SteeringBehavior.cc  TRadioButton.cc
trunk/core/src/: CMakeLists.txt  testMenus.cc  testMov.cc  testRadioB.cc  testStatus.cc
trunk/sound/: CMakeLists.txt
trunk/sound/include/: TMusic.h  TSound.h
trunk/sound/lib/: CMakeLists.txt
trunk/sound/src/: CMakeLists.txt
trunk/testFiles/fsm/: fsm_01.txt  fsm_03.txt  fsm_04.txt
trunk/testFiles/maps/: map1.xml  map4.xml  map5.xml  map6.xml  mapG2.xml  mapM1.xml  mapM2.xml  mapM3.xml  mapM4.xml  mapRuben.xml  mapRuben.xml.aux  map_01.xml  map_04.xml
